--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.66.4",
-    "react-native-background-timer": "^2.4.1",
-    "react-native-sound": "^0.11.1"
+    "react-native-background-timer": "2.4.1",
+    "react-native-keep-awake": "4.0.0",
+    "react-native-sound": "0.11.1",
+    "react-native-splash-screen": "3.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
+    "@babel/core": "7.12.9",
+    "@babel/runtime": "7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "26.6.3",
     "eslint": "7.14.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.66.2",
+    "jest": "26.6.3",
+    "metro-react-native-babel-preset": "0.66.2",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
